--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,5 @@
 # English strings go here for Rails i18n
 en:
   # my_label: "My label"
-  text_traces_title: "Traces are being mined"
+  text_traces_title: "Traces"
   text_menu_home: "Traces"
