Add helper module to list Model classes Add tests to verify Model behavior Add rakefile to trigger tests Update resource file to add new entries

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,9 @@ en:
   # my_label: "My label"
   text_traces_title: "Traces"
   text_menu_home: "Traces"
+  label_traces_story: "Story"
+  label_traces_design: "Design"
+  label_traces_requirement: "Requirements"
+  label_traces_development: "Code"
+  label_traces_testing: "Testing"
+  label_traces_revision: "Testing"
