Changes: 1. added new style in css file for subject column 2. added changes related to pagination 3. added limit propert in 'traces' yamal file. 4. added lables ins 'en' yamal file 5. aded routs for pagination 6. modified erb files as per updated pagination changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,7 @@ en:
   text_traces_title: "Traces"
   text_menu_home: "Traces"
   label_traces_story: "Story Id"
+  label_traces_story_subject: "Subject"
   label_traces_design: "Design"
   label_traces_requirement: "Requirements"
   label_traces_development: "Code"
@@ -11,3 +12,6 @@ en:
   label_traces_revision: "Revisions"
   label_traces_phase: "Phase"
   label_traces_artifact: "Artifact"
+  label_traces_next: "next>"
+  label_traces_previous: "<previous"
+  lable_traces_artifacts_not_available: "Artifacts are not available."
