Change description: 1. Added search funtionality 2. index page modified 3. paginaiton api modified as per search criteria 4. add new properties in en.yml file

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -15,3 +15,5 @@ en:
   label_traces_next: "next>"
   label_traces_previous: "<previous"
   lable_traces_artifacts_not_available: "Artifacts are not available."
+  lable_traces_search_criteria: "Search Criteria:"
+  lable_traces_search_button: "Search"
